add Card component

--- a/src/app/pages/home.component.html
+++ b/src/app/pages/home.component.html
@@ -2,4 +2,5 @@
   <div *ngFor="let record of records;">
     <record-wallet [data]=record></record-wallet>
   </div>
+  <button (click)="openDialog()">Test</button>
 </div>
