add balance component

--- a/src/components/addRecordModal/addRecordModalContent.component.html
+++ b/src/components/addRecordModal/addRecordModalContent.component.html
@@ -10,7 +10,7 @@
     </mat-form-field>
     <mat-form-field floatLabel="always" class="form-group-add-record">
       <mat-label>Amount</mat-label>
-      <input matInput type="number" class="example-right-align" placeholder="0" formControlName="amount" />
+      <input matInput type="text" class="example-right-align" placeholder="0" formControlName="amount" />
       <span matTextPrefix>$&nbsp;</span>
       <span matTextSuffix>.00</span>
     </mat-form-field>
