--- a/src/app/pages/home.component.html
+++ b/src/app/pages/home.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <balance-wallet [total]="balanceTotal"></balance-wallet>
+  <mat-divider></mat-divider>
+  <br/>
   <div *ngFor="let record of records;">
     <record-wallet [data]=record></record-wallet>
   </div>
