--- a/src/components/balance/balance.component.html
+++ b/src/components/balance/balance.component.html
@@ -1,2 +1,2 @@
-<h2 style="text-align: center;">Balance: {{total}}</h2>
+<h2 style="text-align: center;">Balance: {{total | currency:'MXN'}}</h2>
   
